# DataMenager

backend/: alembic.ini  requirements.txt  run.py
backend/alembic/: README  env.py
backend/alembic/versions/: 302065e748c0_added_on_cascade_to_labels.py  48937ca20e49_add_version_id_to_datasets.py  62d7cde9d0a4_added_fk_to_proejct_id_in_dataset.py  9a915f426cf1_added_database_try_2.py  9c60272a743c_change_uuid_handling.py  a17015f5bd3f_add_is_annotated_column.py  b38a34860fc5_added_labels_and_versions.py  cb25f0c1e587_added_datasets.py  f5feb21ca097_added_size_to_dataset.py
backend/app/: main.py
backend/app/core/: __init__.py  database.py
backend/app/models/: __init__.py  datasets.py  images.py  labels.py  projects.py  versions.py
backend/app/native/: CMakeLists.txt  pyproject.toml
backend/app/native/src/: bindings.cpp
backend/app/routers/: __init__.py  datasets.py  images.py  labels.py  projects.py  versions.py
backend/app/schemas/: __init__.py  datasets.py  images.py  labels.py  projects.py  versions.py
backend/app/services/: __init__.py  datasets.py  images.py  labels.py  projects.py  versions.py
backend/app/utils/: DataTracker.py  __init__.py
backend/native/: .gitignore  pyproject.toml
backend/native/include/: augmentator.hpp
backend/native/src/: augmentator.cpp  bindings.cpp  main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: index.ts
frontend/src/api/models/: DatasetAll.ts  DatasetBase.ts  DatasetCreate.ts  DatasetData.ts  ImageBase.ts  ImageCreate.ts  ImageMetadata.ts  LabelBase.ts  LabelCreate.ts  ProjectBase.ts  ProjectCreate.ts  VersionBase.ts  VersionCreate.ts
frontend/src/api/services/: DatasetService.ts  ImagesService.ts  LabelsService.ts  ProjectsService.ts  VersionsService.ts
frontend/src/components/Dashboard/: Dashboard.css  Dashboard.tsx
frontend/src/components/Datasets/: Dataset.css  Datasets.tsx
frontend/src/components/Layout/: Layout.css  Layout.tsx
frontend/src/components/ShowFolderImages/: ShowFolderImages.css  ShowFolderImages.tsx
frontend/src/utils/: index.ts
