[build-system]
requires = ["scikit-build-core", "pybind11", "cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "fast_augmentation"
version = "0.1.0"
description = "Brzi C++ modul za augmentaciju"
requires-python = ">=3.7"

# Ovo kaže scikit-build-u gdje je CMakeLists.txt (u rootu)
[tool.scikit-build]
cmake.version = ">=3.10"